framec/tests/snapshots/cpp_snapshots__consts.snap
---
source: framec/tests/cpp_snapshots.rs
expression: "compile_fixture(\"11_consts\", \"cpp\")"
---
#include <string>
#include <unordered_map>
#include <vector>
#include <any>
#include <memory>
#include <functional>

class ConstsFrameEvent {
public:
    std::string _message;
    std::vector<std::any> _parameters;

    ConstsFrameEvent(const std::string& message, std::vector<std::any> params = {})
        : _message(message), _parameters(std::move(params)) {}
};

class ConstsFrameContext {
public:
    ConstsFrameEvent _event;
    std::any _return;
    std::unordered_map<std::string, std::any> _data;
    bool _transitioned = false;

    ConstsFrameContext(ConstsFrameEvent event, std::any default_return = {})
        : _event(std::move(event)), _return(std::move(default_return)) {}
};

class ConstsCompartment {
public:
    std::string state;
    std::vector<std::any> state_args;
    std::unordered_map<std::string, std::any> state_vars;
    std::vector<std::any> enter_args;
    std::vector<std::any> exit_args;
    std::unique_ptr<ConstsFrameEvent> forward_event;
    std::shared_ptr<ConstsCompartment> parent_compartment;

    explicit ConstsCompartment(const std::string& state) : state(state) {}
};

class Consts {
private:
    std::vector<std::shared_ptr<ConstsCompartment>> _state_stack;
    std::shared_ptr<ConstsCompartment> __compartment;
    std::shared_ptr<ConstsCompartment> __next_compartment;
    std::vector<ConstsFrameContext> _context_stack;

    std::shared_ptr<ConstsCompartment> __prepareEnter(const std::string& leaf, std::vector<std::any> state_args, std::vector<std::any> enter_args) {
        std::shared_ptr<ConstsCompartment> comp = nullptr;
        auto chain_table = hsm_chain();
        for (const auto& name : chain_table[leaf]) {
            auto new_comp = std::make_shared<ConstsCompartment>(name);
            new_comp->state_args = state_args;
            new_comp->enter_args = enter_args;
            new_comp->parent_compartment = comp;
            comp = new_comp;
        }
        return comp;

    }

    void __prepareExit(std::vector<std::any> exit_args) {
        std::shared_ptr<ConstsCompartment> comp = __compartment;
        while (comp) {
            comp->exit_args = exit_args;
            comp = comp->parent_compartment;
        }

    }

    void __kernel(ConstsFrameEvent& __e) {
        // Route event to current state.
        __router(__e);
        // Drain any transitions queued by the handler.
        while (__next_compartment) {
            auto next_compartment = std::move(__next_compartment);
            // Exit the current (leaf) state.
            ConstsFrameEvent __exit_event("<$", __compartment->exit_args);
            __router(__exit_event);
            // Switch to the new compartment.
            __compartment = std::move(next_compartment);
            // Three-branch forward-event handling.
            if (!__compartment->forward_event) {
                // No forwarded event — synthesize a fresh $>.
                ConstsFrameEvent __enter_event("$>", __compartment->enter_args);
                __router(__enter_event);
            } else if (__compartment->forward_event->_message == "$>") {
                // Forwarded event IS $> — dispatch directly so the
                // destination's $> handler receives the caller's payload.
                auto forward_event = std::move(__compartment->forward_event);
                __router(*forward_event);
            } else {
                // Forwarded event is not $> — initialize the destination
                // with a fresh $>, then dispatch the forward.
                auto forward_event = std::move(__compartment->forward_event);
                ConstsFrameEvent __enter_event("$>", __compartment->enter_args);
                __router(__enter_event);
                __router(*forward_event);
            }
            for (auto& ctx : _context_stack) {
                ctx._transitioned = true;
            }
        }

    }

    void __router(ConstsFrameEvent& __e) {
        if (__compartment->state == "Running") {
            _state_Running(__e, __compartment);
        }

    }

    void __transition(std::shared_ptr<ConstsCompartment> next) {
        __next_compartment = next;

    }

    void _state_Running(ConstsFrameEvent& __e, std::shared_ptr<ConstsCompartment> compartment) {
        if (__e._message == "get_count") {
            this->_s_Running_hdl_user_get_count(__e, compartment);
            return;
        }
        if (__e._message == "tick") {
            this->_s_Running_hdl_user_tick(__e, compartment);
            return;
        }

    }

    void _s_Running_hdl_user_get_count(ConstsFrameEvent& __e, std::shared_ptr<ConstsCompartment> compartment) {
        _context_stack.back()._return = std::any(self.count);

    }

    void _s_Running_hdl_user_tick(ConstsFrameEvent& __e, std::shared_ptr<ConstsCompartment> compartment) {
        self.count = self.count + self.step
        if self.count >= self.limit {
            self.count = 0
        }

    }

public:
    i32 step = 5;
    i32 limit = 20;
    i32 count = 0;

    Consts() {
        __compartment = __prepareEnter("Running", std::vector<std::any>{}, std::vector<std::any>{});
    }

    static Consts __create(int step = 5, int limit = 20) {
        Consts c;
        c.step = step;
        c.limit = limit;
        ConstsFrameEvent __e("$>", c.__compartment->enter_args);
        ConstsFrameContext __ctx(std::move(__e));
        c._context_stack.push_back(std::move(__ctx));
        c.__kernel(c._context_stack.back()._event);
        c._context_stack.pop_back();
        return c;
    }

    std::unordered_map<std::string, std::vector<std::string>> hsm_chain() {
        return {
            {"Running", {"Running"} },
        };
    }

    void tick() {
        ConstsFrameEvent __e("tick");
        ConstsFrameContext __ctx(std::move(__e));
        _context_stack.push_back(std::move(__ctx));
        __kernel(_context_stack.back()._event);
        _context_stack.pop_back();

    }

    int get_count() {
        ConstsFrameEvent __e("get_count");
        ConstsFrameContext __ctx(std::move(__e), std::any(int()));
        _context_stack.push_back(std::move(__ctx));
        __kernel(_context_stack.back()._event);
        auto __result = std::any_cast<int>(std::move(_context_stack.back()._return));
        _context_stack.pop_back();
        return __result;

    }
};
