framec/tests/snapshots/cpp_snapshots__forward.snap
---
source: framec/tests/cpp_snapshots.rs
expression: "compile_fixture(\"07_forward\", \"cpp\")"
---
#include <string>
#include <unordered_map>
#include <vector>
#include <any>
#include <memory>
#include <functional>

class ForwardFrameEvent {
public:
    std::string _message;
    std::vector<std::any> _parameters;

    ForwardFrameEvent(const std::string& message, std::vector<std::any> params = {})
        : _message(message), _parameters(std::move(params)) {}
};

class ForwardFrameContext {
public:
    ForwardFrameEvent _event;
    std::any _return;
    std::unordered_map<std::string, std::any> _data;
    bool _transitioned = false;

    ForwardFrameContext(ForwardFrameEvent event, std::any default_return = {})
        : _event(std::move(event)), _return(std::move(default_return)) {}
};

class ForwardCompartment {
public:
    std::string state;
    std::vector<std::any> state_args;
    std::unordered_map<std::string, std::any> state_vars;
    std::vector<std::any> enter_args;
    std::vector<std::any> exit_args;
    std::unique_ptr<ForwardFrameEvent> forward_event;
    std::shared_ptr<ForwardCompartment> parent_compartment;

    explicit ForwardCompartment(const std::string& state) : state(state) {}
};

class Forward {
private:
    std::vector<std::shared_ptr<ForwardCompartment>> _state_stack;
    std::shared_ptr<ForwardCompartment> __compartment;
    std::shared_ptr<ForwardCompartment> __next_compartment;
    std::vector<ForwardFrameContext> _context_stack;

    std::shared_ptr<ForwardCompartment> __prepareEnter(const std::string& leaf, std::vector<std::any> state_args, std::vector<std::any> enter_args) {
        std::shared_ptr<ForwardCompartment> comp = nullptr;
        auto chain_table = hsm_chain();
        for (const auto& name : chain_table[leaf]) {
            auto new_comp = std::make_shared<ForwardCompartment>(name);
            new_comp->state_args = state_args;
            new_comp->enter_args = enter_args;
            new_comp->parent_compartment = comp;
            comp = new_comp;
        }
        return comp;

    }

    void __prepareExit(std::vector<std::any> exit_args) {
        std::shared_ptr<ForwardCompartment> comp = __compartment;
        while (comp) {
            comp->exit_args = exit_args;
            comp = comp->parent_compartment;
        }

    }

    void __kernel(ForwardFrameEvent& __e) {
        // Route event to current state.
        __router(__e);
        // Drain any transitions queued by the handler.
        while (__next_compartment) {
            auto next_compartment = std::move(__next_compartment);
            // Exit the current (leaf) state.
            ForwardFrameEvent __exit_event("<$", __compartment->exit_args);
            __router(__exit_event);
            // Switch to the new compartment.
            __compartment = std::move(next_compartment);
            // Three-branch forward-event handling.
            if (!__compartment->forward_event) {
                // No forwarded event — synthesize a fresh $>.
                ForwardFrameEvent __enter_event("$>", __compartment->enter_args);
                __router(__enter_event);
            } else if (__compartment->forward_event->_message == "$>") {
                // Forwarded event IS $> — dispatch directly so the
                // destination's $> handler receives the caller's payload.
                auto forward_event = std::move(__compartment->forward_event);
                __router(*forward_event);
            } else {
                // Forwarded event is not $> — initialize the destination
                // with a fresh $>, then dispatch the forward.
                auto forward_event = std::move(__compartment->forward_event);
                ForwardFrameEvent __enter_event("$>", __compartment->enter_args);
                __router(__enter_event);
                __router(*forward_event);
            }
            for (auto& ctx : _context_stack) {
                ctx._transitioned = true;
            }
        }

    }

    void __router(ForwardFrameEvent& __e) {
        if (__compartment->state == "Start") {
            _state_Start(__e, __compartment);
        } else if (__compartment->state == "Middle") {
            _state_Middle(__e, __compartment);
        } else if (__compartment->state == "End") {
            _state_End(__e, __compartment);
        }

    }

    void __transition(std::shared_ptr<ForwardCompartment> next) {
        __next_compartment = next;

    }

    void _state_Start(ForwardFrameEvent& __e, std::shared_ptr<ForwardCompartment> compartment) {
        if (__e._message == "run") {
            this->_s_Start_hdl_user_run(__e, compartment);
            return;
        }

    }

    void _state_Middle(ForwardFrameEvent& __e, std::shared_ptr<ForwardCompartment> compartment) {
        if (__e._message == "finish") {
            this->_s_Middle_hdl_user_finish(__e, compartment);
            return;
        }
        if (__e._message == "run") {
            this->_s_Middle_hdl_user_run(__e, compartment);
            return;
        }

    }

    void _state_End(ForwardFrameEvent& __e, std::shared_ptr<ForwardCompartment> compartment) {
        if (__e._message == "finish") {
            this->_s_End_hdl_user_finish(__e, compartment);
            return;
        }

    }

    void _s_Start_hdl_user_run(ForwardFrameEvent& __e, std::shared_ptr<ForwardCompartment> compartment) {
        self.starts = self.starts + 1
        auto __compartment = __prepareEnter("Middle", std::vector<std::any>{}, std::vector<std::any>{});
        __compartment->forward_event = std::make_unique<ForwardFrameEvent>(__e);
        __transition(std::move(__compartment));
        return;

    }

    void _s_Middle_hdl_user_finish(ForwardFrameEvent& __e, std::shared_ptr<ForwardCompartment> compartment) {
        auto __next = __prepareEnter("End", std::vector<std::any>{}, std::vector<std::any>{});
        __transition(std::move(__next));
        return;

    }

    void _s_Middle_hdl_user_run(ForwardFrameEvent& __e, std::shared_ptr<ForwardCompartment> compartment) {
        self.middles = self.middles + 1

    }

    void _s_End_hdl_user_finish(ForwardFrameEvent& __e, std::shared_ptr<ForwardCompartment> compartment) {


    }

public:
    i32 starts = 0;
    i32 middles = 0;

    Forward() {
        __compartment = __prepareEnter("Start", std::vector<std::any>{}, std::vector<std::any>{});
    }

    static Forward __create() {
        Forward c;
        ForwardFrameEvent __e("$>", c.__compartment->enter_args);
        ForwardFrameContext __ctx(std::move(__e));
        c._context_stack.push_back(std::move(__ctx));
        c.__kernel(c._context_stack.back()._event);
        c._context_stack.pop_back();
        return c;
    }

    std::unordered_map<std::string, std::vector<std::string>> hsm_chain() {
        return {
            {"Start", {"Start"} },
            {"Middle", {"Middle"} },
            {"End", {"End"} },
        };
    }

    void run() {
        ForwardFrameEvent __e("run");
        ForwardFrameContext __ctx(std::move(__e));
        _context_stack.push_back(std::move(__ctx));
        __kernel(_context_stack.back()._event);
        _context_stack.pop_back();

    }

    void finish() {
        ForwardFrameEvent __e("finish");
        ForwardFrameContext __ctx(std::move(__e));
        _context_stack.push_back(std::move(__ctx));
        __kernel(_context_stack.back()._event);
        _context_stack.pop_back();

    }
};
